Architectural changes: - The getFilepath and getPid functions have been moved to the utils library - Removed unnecessary comments - The addition of a common Permissions class for Server and Client has begun

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,8 @@ endif()
 find_package(sdbus-c++ REQUIRED)
 find_package(SQLite3 REQUIRED)
 
+# добавление директории с утилитами
+add_subdirectory(utils)
+
 # добавляем директорию сервиса permissions
 add_subdirectory(permissions)
