--- a/permissions/CMakeLists.txt
+++ b/permissions/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.23)
 
+# добавляем директорию библиотеки general
+add_subdirectory(general)
+
 # добавляем директорию сервиса permissions-server
 add_subdirectory(server)
-
 
 # добавляем директорию сервиса permissions-client
 add_subdirectory(client)
