--- a/permissions/client_lib/CMakeLists.txt
+++ b/permissions/client_lib/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.23)
 
+project(permission_client_lib)
+
 ################
-# ПЕРЕМЕННЫЕ
+# ПЕРЕМЕННЫЕ БИБЛИОТЕКИ
 ################
 
 # заголовочные файлы
-file(GLOB HDRS include/*.h)
+file(GLOB HDRS include/*)
 
-message("###### UTILS LIB ######")
+message("###### ${PROJECT_NAME} ######")
 message( "Заголовочные файлы:")
 foreach(header ${HDRS})
-message("  ${header}")
+    message("  ${header}")
 endforeach()
 
 # файлы исходного кода
@@ -18,33 +20,35 @@ file(GLOB SRCS src/*)
 
 message("Файлы исходного кода:")
 foreach(src ${SRCS})
-message("  ${src}")
+    message("  ${src}")
 endforeach()
 
 # список библиотек
 set(LIBS 
-#SQLite::SQLite3
-utils
-SDBusCpp::sdbus-c++
+    permission_general_lib
+    #SQLite::SQLite3
+    SDBusCpp::sdbus-c++
 )
 message("############")
 
 ################
 
-# объявляем таргет библиотеки с утилитами
-add_library(permission_general ${HDRS} ${SRCS})
+# создание исполняемого файла
+add_library(${PROJECT_NAME} ${HDRS} ${SRCS})
 
 # подключение библиотек
-target_link_libraries(permission_general ${LIBS})
+target_link_libraries(${PROJECT_NAME} ${LIBS})
 
 # подключаем заголовочные файлы
-target_include_directories(permission_general
+target_include_directories(${PROJECT_NAME}
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
 # проверка утечек памяти и вывод варнингов в дебаге
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(permission_general PRIVATE -W -Wall -fsanitize=address -g)
-    target_link_options(permission_general PRIVATE -fsanitize=address)
+    target_compile_options(${PROJECT_NAME} PRIVATE -W -Wall -fsanitize=address -g)
+    target_link_options(${PROJECT_NAME} PRIVATE -fsanitize=address)
 endif()
+
+################
