--- a/permissions/general_lib/CMakeLists.txt
+++ b/permissions/general_lib/CMakeLists.txt
@@ -26,7 +26,7 @@ endforeach()
 # список библиотек
 set(LIBS 
 #SQLite::SQLite3
-#    utils_lib
+    utils_lib
     SDBusCpp::sdbus-c++
 )
 message("############")
