--- a/permissions/client/CMakeLists.txt
+++ b/permissions/client/CMakeLists.txt
@@ -6,15 +6,8 @@ project(permission_client)
 # ПЕРЕМЕННЫЕ ТЕСТОВОГО КЛИЕНТА
 ################
 
-# заголовочные файлы
-file(GLOB HDRS include/*)
 
 message("###### ${PROJECT_NAME} ######")
-message( "Заголовочные файлы:")
-foreach(header ${HDRS})
-    message("  ${header}")
-endforeach()
-
 # файлы исходного кода
 file(GLOB SRCS src/*)
 
@@ -27,7 +20,6 @@ endforeach()
 set(LIBS 
     permission_general_lib
     permission_client_lib
-    #SQLite::SQLite3
     SDBusCpp::sdbus-c++
 )
 message("############")
@@ -35,16 +27,10 @@ message("############")
 ################
 
 # создание исполняемого файла
-add_executable(${PROJECT_NAME} ${HDRS} ${SRCS})
+add_executable(${PROJECT_NAME} ${SRCS})
 
 # подключение библиотек
 target_link_libraries(${PROJECT_NAME} ${LIBS})
-
-# подключаем заголовочные файлы
-target_include_directories(${PROJECT_NAME}
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
 
 # проверка утечек памяти и вывод варнингов в дебаге
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
