--- a/permissions/server/CMakeLists.txt
+++ b/permissions/server/CMakeLists.txt
@@ -6,14 +6,7 @@ project(permission_server)
 # ПЕРЕМЕННЫЕ
 ################
 
-# заголовочные файлы
-file(GLOB HDRS include/*.h)
-
 message("###### ${PROJECT_NAME} ######")
-message( "Заголовочные файлы:")
-foreach(header ${HDRS})
-message("  ${header}")
-endforeach()
 
 # файлы исходного кода
 file(GLOB SRCS src/*)
@@ -35,16 +28,10 @@ message("############")
 ################
 
 # создание исполняемого файла
-add_executable(${PROJECT_NAME} ${HDRS} ${SRCS})
+add_executable(${PROJECT_NAME} ${SRCS})
 
 # подключение библиотек
 target_link_libraries(${PROJECT_NAME} ${LIBS})
-
-# подключаем заголовочные файлы
-target_include_directories(${PROJECT_NAME}
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
 
 # проверка утечек памяти и вывод варнингов в дебаге
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
